--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <snapshotRepository>
             <id>deployment</id>
             <name>Internal Snapshot Releases</name>
-            <url>http://54.188.221.175:8081/repository/maven-central/</url>
+            <url>http:http://54.188.221.175:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
   <dependencies>
