--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
    <distributionManagement>
         <repository>
             <id>deployment</id>
-            <name>Internal Releases</name>
+            <name>maven-central</name>
             <url>http://54.188.221.175:8081/repository/maven-central/</url>
         </repository>
     </distributionManagement>
