--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 <artifactId>studentapp</artifactId>
 <version>2.1.1</version>
 <packaging>example.war</packaging>
-</project>
+<project>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
