--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
             <name>Myrepo</name>
             <url>http://44.227.64.179:8081/repository/Myrepo/</url>
         </repository>
+        <repository>
+          <name>maven-snapshots</name>
+          <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
     </distributionManagement>
   <dependencies>
   	<dependency>
