--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <repository>
           <name>maven-snapshots</name>
           <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
+        </repository>
     </distributionManagement>
   <dependencies>
   	<dependency>
