--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,11 @@
             <name>Myrepo</name>
             <url>http://44.227.64.179:8081/repository/Myrepo/</url>
         </repository>
-        <repository-new>
+        <repository>
+          <id>maven-snapshots</id>
           <name>maven-snapshots</name>
           <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
-        </repository-new>
+        </repository>
     </distributionManagement>
   <dependencies>
   	<dependency>
