--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
             <name>Myrepo</name>
             <url>http://44.227.64.179:8081/repository/Myrepo/</url>
         </repository>
-        <snapshotrepository>
+        <snapshotRepository>
           <id>maven-snapshots</id>
           <name>maven-snapshots</name>
           <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
-        </snapshotrepository>
+        </snapshotRepository>
     </distributionManagement>
   <dependencies>
   	<dependency>
