--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,12 @@
             <name>Myrepo</name>
             <url>http://44.227.64.179:8081/repository/Myrepo/</url>
         </repository>
-        <snapshotRepository>
+        <repository>
+          <repository>
           <id>maven-snapshots</id>
           <name>maven-snapshots</name>
           <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
+        </repository>
     </distributionManagement>
   <dependencies>
   	<dependency>
