--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,16 @@
     </plugins>
   </build>
    <distributionManagement>
-        <repository>
-            
-            <name>Myrepo</name>
-            <url>http://44.227.64.179:8081/repository/Myrepo/</url>
-            
+         <repository>
+            <id>maven-central</id>
+            <name>maven-central</name>
+            <url>http://44.227.64.179:8081/repository/maven-central/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
             <name>maven-snapshots</name>
             <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
-        </repository>     
+        </snapshotRepository>   
     </distributionManagement>
   <dependencies>
   	<dependency>
