--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
   </build>
    <distributionManagement>
          <repository>
-            <id>maven-central</id>
-            <name>maven-central</name>
-            <url>http://44.227.64.179:8081/repository/maven-central/</url>
+            <id>Myrepo</id>
+            <name>Myrepo</name>
+            <url>http://44.227.64.179:8081/repository/Myrepo/</url>
         </repository>
         <snapshotRepository>
             <id>maven-snapshots</id>
