--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <modelVersion>4.0.0</modelVersion>
 <groupId>com.jdevs</groupId>
 <artifactId>studentapp</artifactId>
-<version>2.1.3</version>
+<version>2.1.4</version>
 <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -32,9 +32,9 @@
             <url>http://44.227.64.179:8081/repository/Myrepo/</url>
         </repository>
         <snapshotRepository>
-            <id>Myrepo</id>
-            <name>Myrepo</name>
-            <url>http://44.227.64.179:8081/repository/Myrepo/</url>
+            <id>Mysnap</id>
+            <name>Mysnap</name>
+            <url>http://44.227.64.179:8081/repository/Mysnap/</url>
         </snapshotRepository>   
     </distributionManagement>
   <dependencies>
