--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,14 @@
   </build>
    <distributionManagement>
          <repository>
-            <id>Myrepo</id>
-            <name>Myrepo</name>
-            <url>http://44.227.64.179:8081/repository/Myrepo/</url>
+            <id>maven-releases</id>
+            <name>maven-releases</name>
+            <url>http://44.227.64.179:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>Mysnap</id>
-            <name>Mysnap</name>
-            <url>http://44.227.64.179:8081/repository/Mysnap/</url>
+            <id>maven-snapshots</id>
+            <name>maven-snapshots</name>
+            <url>http://44.227.64.179:8081/repository/maven-snapshots/</url>
         </snapshotRepository>   
     </distributionManagement>
   <dependencies>
