--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <modelVersion>4.0.0</modelVersion>
 <groupId>test</groupId>
 <artifactId>test</artifactId>
-<version>1.0</version>
+<version>1.1.1</version>
 <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -31,11 +31,11 @@
             <name>release</name>
             <url>http://44.227.64.179:8081/repository/release/</url>
         </repository>
-        <repository>
+        <snapshotRepository>
             <id>snapshot</id>
             <name>snapshot</name>
             <url>http://44.227.64.179:8081/repository/snapshot/</url>
-        </repository>   
+        </snapshotRepository>   
     </distributionManagement>
   <dependencies>
   	<dependency>
