--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <modelVersion>4.0.0</modelVersion>
 <groupId>test</groupId>
 <artifactId>test</artifactId>
-<version>LATEST</version>
+<version>2.0</version>
 <packaging>war</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
